<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/label_thanks"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:text="@string/label_thanks_content"/>

    <TextView
            android:id="@+id/tv_ok"
            android:text="@string/label_ok"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>