<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView android:layout_width="wrap_content"
               android:id="@+id/iv_logo"
               android:layout_height="wrap_content"
               android:src="@drawable/logo_janda_app"
               android:layout_marginStart="20dp"
               android:layout_marginTop="20dp"
               android:layout_gravity="center"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_toEndOf="@+id/iv_logo"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_gravity="start"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_app_name"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:layout_marginTop="-5dp"
                android:layout_gravity="start"/>

    </LinearLayout>


    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="20dp"
              android:textSize="14sp"
              android:textColor="@color/colorWhite"
              android:text="@string/sub_header_janda"
              android:layout_below="@+id/iv_logo"/>

</RelativeLayout>