<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
               android:src="@drawable/splash_background" android:scaleType="fitXY"/>

    <include layout="@layout/header_login"/>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:layout_above="@+id/ll_password"
                                                   android:layout_marginStart="20dp"
                                                   android:layout_marginEnd="20dp"
                                                   app:passwordToggleEnabled="true"
                                                   app:passwordToggleTint="@color/colorWhite"
                                                   android:layout_centerInParent="true"
                                                   android:textColorHint="@color/colorWhite"
                                                   android:id="@+id/ll_email">

        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/label_email"
                                                         android:textColor="@color/colorWhite"
                                                         android:inputType="textEmailAddress"
                                                         android:textSize="14sp"
                                                         android:textColorHint="@color/colorWhite"
                                                         android:id="@+id/et_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginStart="20dp"
                                                   android:layout_marginEnd="20dp"
                                                   android:layout_marginTop="10dp"
                                                   app:passwordToggleEnabled="true"
                                                   app:passwordToggleTint="@color/colorWhite"
                                                   android:layout_centerInParent="true"
                                                   android:textColorHint="@color/colorWhite"
                                                   android:id="@+id/ll_password">

        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/label_password"
                                                         android:textColor="@color/colorWhite"
                                                         android:textSize="14sp"
                                                         android:inputType="textPassword"
                                                         android:textColorHint="@color/colorWhite"
                                                         android:id="@+id/et_password"/>

    </android.support.design.widget.TextInputLayout>


    <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_login"
            android:layout_below="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            fancy:fb_textColor="@color/colorPrimary"
            fancy:fb_text="Login"
            fancy:fb_defaultColor="@color/colorWhite"
            fancy:fb_focusColor="@color/colorPrimary"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/tv_register"
              android:layout_below="@id/btn_login"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="20dp"
              android:text="@string/label_register"
              android:textColor="@color/colorWhite"/>

</RelativeLayout>